--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "main": "./src/index.js",
   "scripts": {
     "test": "jest",
-    "start": "webpack serve --open --config webpack.dev.js",
-    
+    "start": "webpack-dev-server --mode development --open --hot",
+    "dev": "cross-env NODE_ENV=development webpack",
+    "prod": "cross-env NODE_ENV=production webpack --mode production"
   },
   "repository": {
     "type": "git",
@@ -26,15 +27,18 @@
     "@babel/preset-react": "^7.12.13",
     "babel-jest": "^26.6.3",
     "babel-loader": "^8.2.2",
+    "cross-env": "^7.0.3",
     "css-loader": "^5.0.2",
     "jest": "^26.6.3",
     "style-loader": "^2.0.0",
+    "uglifyjs-webpack-plugin": "^2.2.0",
     "webpack": "^5.23.0",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.2",
     "webpack-merge": "^5.7.3"
   },
   "dependencies": {
+    "@hot-loader/react-dom": "^17.0.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-hot-loader": "^4.13.0",
