--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "test": "jest",
     "start": "webpack-dev-server --mode development --open --hot",
-    "dev": "cross-env NODE_ENV=development webpack",
-    "prod": "cross-env NODE_ENV=production webpack --mode production"
+    "dev": "cross-env process.env.NODE_ENV=development webpack",
+    "prod": "cross-env process.env.NODE_ENV=production webpack --mode production"
   },
   "repository": {
     "type": "git",
