--- a/package.json
+++ b/package.json
@@ -21,21 +21,20 @@
   },
   "homepage": "https://github.com/ihargit/react_course#readme",
   "devDependencies": {
-    "@babel/cli": "^7.12.17",
-    "@babel/core": "^7.12.17",
-    "@babel/preset-env": "^7.12.17",
+    "@babel/cli": "^7.13.0",
+    "@babel/core": "^7.13.8",
+    "@babel/preset-env": "^7.13.8",
     "@babel/preset-react": "^7.12.13",
     "babel-jest": "^26.6.3",
     "babel-loader": "^8.2.2",
     "cross-env": "^7.0.3",
-    "css-loader": "^5.0.2",
+    "css-loader": "^5.1.0",
     "jest": "^26.6.3",
+    "process": "^0.11.10",
     "style-loader": "^2.0.0",
-    "uglifyjs-webpack-plugin": "^2.2.0",
-    "webpack": "^5.23.0",
+    "webpack": "^5.24.2",
     "webpack-cli": "^3.3.12",
-    "webpack-dev-server": "^3.11.2",
-    "webpack-merge": "^5.7.3"
+    "webpack-dev-server": "^3.11.2"
   },
   "dependencies": {
     "@hot-loader/react-dom": "^17.0.1",
@@ -44,6 +43,7 @@
     "react-hot-loader": "^4.13.0",
     "react-redux": "^7.2.2",
     "react-router": "^5.2.0",
-    "redux": "^4.0.5"
+    "redux": "^4.0.5",
+    "uuid": "^8.3.2"
   }
 }
