--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react-hot-loader": "^4.13.0",
     "react-redux": "^7.2.2",
     "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
     "redux": "^4.0.5",
     "uuid": "^8.3.2"
   }
