--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "react-router-dom": "^5.2.0",
     "redux": "^4.0.5",
     "redux-saga": "^1.1.3",
+    "regenerator-runtime": "^0.13.7",
     "uuid": "^8.3.2"
   }
 }
